added the Note class, routes for users and notes, and AddNoteForm

--- a/templates/register.html
+++ b/templates/register.html
@@ -28,6 +28,10 @@ Sign up!
 
   </form>
 
+  <form action="/login">
+    <button>Log in to existing account!</button>
+  </form>
+
 {% endblock %}
 
 
