--- a/templates/user.html
+++ b/templates/user.html
@@ -11,20 +11,18 @@ User Notes
 
 <h1>Notes</h1>
 
+<form action="/logout" method="POST">
+  {{ form.hidden_tag() }}
 <!-- Going to add for loop to add in notes-->
 <ul>
   {% for note in user.notes %}
   <li>
-    <a href="/notes/{{note.id}}/update">Update Note</a>
-    <a href="/notes/{{note.id}}/delete">Delete Note</a>
+    <button formaction="/notes/{{note.id}}/update" formmethod="GET">Update Note</button>
+    <button formaction="/notes/{{note.id}}/delete" formmethod="POST">Delete Note</button>
     {{ note.title}}
   </li>
   {% endfor %}
 </ul>
-
-
-<form action="/logout" method="POST">
-  {{ form.hidden_tag() }}
   <button formaction="/users/{{user.username}}/notes/add" formmethod="POST">
     Add Note
   </button>
@@ -33,4 +31,5 @@ User Notes
   </button>
   <button>Log out</button>
 </form>
+
 {% endblock %}
